--- a/plotter/static/bioviz.css
+++ b/plotter/static/bioviz.css
@@ -1,42 +1,81 @@
-td.numeric {text-align: right;}
-
-td.text {text-align:left;}
-
-table {font-size:inherit;font:100%;}
-select, input, textarea {font:99% arial,helvetica,clean,sans-serif;}
-
-body * {line-height:1.5em;}
-
-* {
-    margin: 0; padding:0; 
-    font-family: Verdana, Tahoma, sans-serif; 
+td.numeric {
+    text-align: right;
 }
 
-body {margin: 1em;}
+td.text {
+    text-align: left;
+}
 
-li, dd { margin-left:5%; }
-fieldset { padding: .5em; }
+table {
+    font-size: inherit;
+    font: 100%;
+}
+select, input, textarea {
+    font: 99% arial,helvetica,clean,sans-serif;
+}
+
+body * {
+    line-height: 1.5em;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Tahoma, sans-serif;
+}
+
+body {
+    margin: 1em;
+    height: 100%;
+}
+
+li, dd {
+    margin-left: 5%;
+}
+fieldset {
+    padding: .5em;
+}
 code, pre, tt {
-  font-family: monospace; 
-  font-size: 100%;
-  border: 1px solid #ccc;
-  background-color: #DCE6CF;
+    font-family: monospace;
+    font-size: 100%;
+    border: 1px solid #ccc;
+    background-color: #DCE6CF;
 }
 td.mono {
     font-family: monospace;
     vertical-align: middle;
 }
 
-small {font-size: 0.8em;}
-blockquote {margin: 1em 1em; font-size: 0.9em;}
+small {
+    font-size: 0.8em;
+}
+blockquote {
+    margin: 1em 1em;
+    font-size: 0.9em;
+}
 
-code strong {font-family: monospace;}
+code strong {
+    font-family: monospace;
+}
 
-a:link, a:visited {color: #513058; }
+a:link, a:visited {
+    color: #513058;
+}
 
-h1 {font-size: 4em; font-weight: normal; margin-bottom: 0.4em; text-transform: lowercase;}
-h2 {font-size: 1.5em; font-weight: bold}
-h3 {font-size: 0.9em; font-weight: bold}
+h1 {
+    font-size: 4em;
+    font-weight: normal;
+    margin-bottom: 0.4em;
+    text-transform: lowercase;
+}
+h2 {
+    font-size: 1.5em;
+    font-weight: bold
+}
+h3 {
+    font-size: 0.9em;
+    font-weight: bold
+}
 
 /* Colour inspiration: 
 http://wellstyled.com/tools/colorscheme2/index-en.html?compl;50;0;150;0.5;-0.9;0.5;0.5;0.1;0.9;0.75;0.75;0.5;-0.9;0.5;0.5;0.1;0.9;0.75;0.75;0.5;-0.9;0.5;0.5;0.1;0.9;0.75;0.75;0.5;-0.9;0.5;0.5;0.1;0.9;0.75;0.75;0
@@ -48,17 +87,28 @@ Greens     Purples
 #668040     #804070
 */
 
-a:link, a:visited {color: #804070;}
-a:hover {background-color: #DCE6CF }
+a:link, a:visited {
+    color: #804070;
+}
+a:hover {
+    background-color: #DCE6CF
+}
 
-td.caption {font-size: 0.9em; color: #333; padding: 4px; background-color:#e9e9e9;}
+td.caption {
+    font-size: 0.9em;
+    color: #333;
+    padding: 4px;
+    background-color: #e9e9e9;
+}
 
 .box {
     margin: auto;
     border-left: 5px solid #668040;
     background-color: #DCE6CF;
 }
-.box p {margin: 0.3em 0;}
+.box p {
+    margin: 0.3em 0;
+}
 
 .box, h1 {
     padding: 1px 0 1px 5px;
@@ -71,15 +121,90 @@ h1 {
 }
 
 
-h1 {margin-bottom: 0;}
+h1 {
+    margin-bottom: 0;
+}
 /* Table formatting -------------------- */
-table.about td {padding:6px;}
-table {border-collapse: collapse; margin-bottom: 1.5em;}
-td, th {vertical-align: top;  }
-td.left {text-align: left; }
-th {text-align: center; }
-table.compare th {padding: 5px; }
-table.compare td {padding-right: 5px; border: 1px solid grey; }
-table.home td {padding-left: 2px; padding-right: 2px; align: right;}
-tr.first td {padding-top: 1em;}
+table.about td {
+    padding: 6px;
+}
+table {
+    border-collapse: collapse;
+    margin-bottom: 1.5em;
+}
+td, th {
+    vertical-align: top;
+}
+td.left {
+    text-align: left;
+}
+th {
+    text-align: center;
+}
+table.compare th {
+    padding: 5px;
+}
+table.compare td {
+    padding-right: 5px;
+    border: 1px solid grey;
+}
+table.home td {
+    padding-left: 2px;
+    padding-right: 2px;
+    align: right;
+}
+tr.first td {
+    padding-top: 1em;
+}
 
+/** new rules added by abhishek shrivastava <x.abhishek.flyhigh@gmail.com>**/
+a.overviewLink {
+    height: inherit;
+    display: inline-block;
+}
+
+a.overviewLink:hover {
+    border-bottom: 1px solid red;
+    border-top: 1px solid red;
+    background-color: transparent;
+
+}
+
+a.jumpLink {
+    margin-right: 10px;
+}
+
+/* lets do some footer styling */
+html {
+  height: 100%;
+}
+
+#container {
+  margin: 1em;
+  height: auto;
+  min-height: 100%;
+}
+
+footer {
+  clear: both;
+  position: relative;
+}
+
+.footer {
+    background-color: rgb(0, 147, 255);
+    color: white;
+    padding: 2px 0 0px 10px;
+    margin-left: -1em;
+    margin-right: -1em;
+}
+
+.footer a {
+  color: #025671;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  background-color: transparent;
+  color: #D7E2EA;
+  text-decoration: underline;
+}
