--- a/plotter/static/bioviz.css
+++ b/plotter/static/bioviz.css
@@ -166,8 +166,13 @@ a.overviewLink {
 a.overviewLink:hover {
     border-bottom: 1px solid red;
     border-top: 1px solid red;
-    background-color: transparent;
+    background-color: rgba(242, 6, 255, 0.2);
+}
 
+a.overviewLink:active {
+    border-bottom: 1px solid blue;
+    border-top: 1px solid red;
+    background-color: rgba(242, 6, 255, 0.2);
 }
 
 a.jumpLink {
